2007-09-23  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/fetch_command.rb: `gem fetch` downloads a gem
	to the current directory.  Feature request #10752 by Bret Pettichord.
	* lib/rubygems/commands/local_remote_options.rb, etc.: Fix spelling of
	'threshold'.

2007-09-22  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/open-uri.rb: Don't document our OpenURI.
	* lib/rubygems/commands/generate_index_command.rb: Fix Indexer class
	change.
	* lib/rubygems/commands/mirror_command.rb: Fix for 1.9.
	* lib/rubygems/commands/pristine_command.rb: Have `gem pristine`
	give a better report of what it accomplished.
	* lib/rubygems/command.rb: Add optional description field.
	* lib/rubygems/installer.rb: Hack around broken Pathname#absolute? on
	windows.  Patch #14139 by Jim Hughes.

2007-09-20  Eric Hodel  <drbrain@segment7.net>

	* misc files: Tests pass on 1.9.
	* test/gemutilities.rb: Added Object#send! stub for 1.8.
	* test/test_open_uri.rb: Require gem_open_uri.rb to avoid warnings.
	* lib/rubygems/commands/sources_command.rb: Clarify `gem sources -c`
	and what `gem sources` does.  Patch by Hugh Sasse.

2007-09-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/platform.rb: Make Gem::Platform a class.
	* lib/rubygems/specification.rb: Gem::Specification#validate returns
	true, non-Gem::Platform platforms are no longer allowed.
	* test/gemutilities.rb: 1.9 compatiblity fixes.
	* lib/rubygems/dependency_installer.rb: Work around a bug in URI.parse
	which misinterprets "C:/".  Patch #13537 submitted by Daniel Berger.
	* lib/rubygems/format.rb: Ensure file handles are closed.  Patch
	#13533 submitted by Daniel Berger.
	* test/test_gem_installer.rb: Win32 path fix.  Patch #13528 submitted
	by Daniel Berger.
	* test/gemutilities.rb: Make the platform be a win32 platform on
	win32.  Fixes confusion in generate_bin_symlink tests.  Patch #13529
	submitted by Daniel Berger.
	* test/test_gem_specification.rb: Sequel to above.  Patch