@@ -74,10 +74,10 @@ class TestGemInstaller < RubyGemTestCase
 # this file is here to facilitate running it.
 #
 
-ENV['GEM_HOME'] ||= '#{@gemhome}'
 require 'rubygems'
 
 version = \">= 0\"
+
 if ARGV.first =~ /^_(.*)_$/ and Gem::Version.correct? $1 then
   version = $1
   ARGV.shift
@@ -242,7 +242,6 @@ ruby: No such file or directory -- extconf.rb (LoadError)
 
     wrapper = File.read installed_exec
     assert_match %r|generated by RubyGems|, wrapper
-    assert_match %r|ENV\['GEM_HOME'\] \|\|= '#{@gemhome}'|, wrapper
   end
 
   def test_generate_bin_scripts_install_dir
@@ -267,7 +266,6 @@ ruby: No such file or directory -- extconf.rb (LoadError)
 
     wrapper = File.read installed_exec
     assert_match %r|generated by RubyGems|, wrapper
-    assert_match %r|ENV\['GEM_HOME'\] \|\|= '#{@gemhome}2'|, wrapper
   end
 
   def test_generate_bin_scripts_no_execs
